WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
94376
[EFL] REGRESSION(
r125923
): Breaks EFL build
https://bugs.webkit.org/show_bug.cgi?id=94376
Summary
[EFL] REGRESSION(r125923): Breaks EFL build
Sudarsana Nagineni (babu)
Reported
2012-08-17 12:38:57 PDT
EFL build break after
r125923
. [ 85%] Building CXX object Source/WebKit2/CMakeFiles/ewebkit2.dir/UIProcess/WebPageProxy.cpp.o /home/buildslave-1/webkit-buildslave/efl-linux-64-debug/build/Source/WebKit2/UIProcess/WebPageProxy.cpp: In member function ‘void WebKit::WebPageProxy::didReceiveIntentForFrame(uint64_t, const WebKit::IntentData&, CoreIPC::ArgumentDecoder*)’: /home/buildslave-1/webkit-buildslave/efl-linux-64-debug/build/Source/WebKit2/UIProcess/WebPageProxy.cpp:2209:86: error: no matching function for call to ‘WebKit::WebIntentData::create(const WebKit::IntentData&, WTF::RefPtr<WebKit::WebProcessProxy>&)’ /home/buildslave-1/webkit-buildslave/efl-linux-64-debug/build/Source/WebKit2/UIProcess/WebPageProxy.cpp:2209:86: note: candidate is: /home/buildslave-1/webkit-buildslave/efl-linux-64-debug/build/Source/WebKit2/UIProcess/WebIntentData.h:47:38: note: static WTF::PassRefPtr<WebKit::WebIntentData> WebKit::WebIntentData::create(const WebKit::IntentData&, WebKit::WebProcessProxy*) /home/buildslave-1/webkit-buildslave/efl-linux-64-debug/build/Source/WebKit2/UIProcess/WebIntentData.h:47:38: note: no known conversion for argument 2 from ‘WTF::RefPtr<WebKit::WebProcessProxy>’ to ‘WebKit::WebProcessProxy*’ make[2]: *** [Source/WebKit2/CMakeFiles/ewebkit2.dir/UIProcess/WebPageProxy.cpp.o] Error 1 make[1]: *** [Source/WebKit2/CMakeFiles/ewebkit2.dir/all] Error 2 make: *** [all] Error 2
Attachments
Patch
(1.32 KB, patch)
2012-08-17 12:43 PDT
,
Sudarsana Nagineni (babu)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sudarsana Nagineni (babu)
Comment 1
2012-08-17 12:43:54 PDT
Created
attachment 159181
[details]
Patch Fix build break.
WebKit Review Bot
Comment 2
2012-08-17 13:43:53 PDT
Comment on
attachment 159181
[details]
Patch Clearing flags on attachment: 159181 Committed
r125930
: <
http://trac.webkit.org/changeset/125930
>
WebKit Review Bot
Comment 3
2012-08-17 13:44:09 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug