[EFL] REGRESSION(r125923): Breaks EFL build https://bugs.webkit.org/show_bug.cgi?id=94376

Patch by Sudarsana Nagineni <sudarsana.nagineni@linux.intel.com> on 2012-08-17
Reviewed by Alexey Proskuryakov.

Fix EFL build break after r125923.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didReceiveIntentForFrame):

Canonical link: https://commits.webkit.org/112181@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125930 268f45cc-cd09-0410-ab3c-d52691b4dbfc